made some changes to the css html and js files. moved the NEXT and PREV buttons to the header but that's changing later anyway to a slider. still, was getting in the way of the rest of the layout anyway.

--- a/israel.html
+++ b/israel.html
@@ -17,19 +17,17 @@
           <ul>
             <li>West Bank</li>
             <li>Gaza Strip</li>
-            <li>Golan Heights</li>
           </ul>
         </nav>
       </div>
-      <div class="third">
+      <div class="third" id="year_toggle">
         <h1>2013</h1>
+
       </div>
     </div>
     <div class="chart_area">
-      <div class="two-third">
         <!--// settlement chart is here //-->
-          <p id="chart" style="margin:auto"></p>
-      </div>
+          <p id="chart"></p>
       <div class="third">
         </p>Historical data goes here.</p>
       </div>
