adding svg map and jquery that goes with it. i put the jquery in a file separate from the main javascript.

--- a/israel.html
+++ b/israel.html
@@ -47,13 +47,15 @@
           <p id="chart"></p>
       </div>
       <div class="third">
-        </p>Historical data goes here.</p>
+        <div id ="map">
+          </p>Map data goes here.</p>
+        </div>
       </div>
     </div>
     <!--// other charts and stats here //-->
     <div class="two-third">
-      <div class="half">
-        </p>Map data goes here.</p>
+      <div class="half" >
+        </p>Historical data goes here.</p>
       </div>
       <div class="half">
         </p>Total population goes here.</p>
@@ -62,4 +64,6 @@
   </body>    
 
 <script src="israel.js"></script>
+<script src="map.js"></script>
+
 </html>
