made some more tweaks

--- a/israel.html
+++ b/israel.html
@@ -62,7 +62,7 @@
       </div>
     </div>
     <!--// other charts and stats here //-->
-    <div class="two-third">
+    <div class="two-third" id="other_data">
       <div class="half" >
         </p>Historical data goes here.</p>
       </div>
