--- a/israel.html
+++ b/israel.html
@@ -63,7 +63,7 @@
     </div>
     <!--// other charts and stats here //-->
     <div class="two-third" id="other_data">
-      <div class="half" >
+      <div id="eventdiv" class="half" >
         </p>Historical data goes here.</p>
       </div>
       <div class="half">
