--- a/israel.html
+++ b/israel.html
@@ -35,11 +35,11 @@
         <div class="radio half" id="choose_settlement">
           <!--// radio buttons //-->
             <h3>What does settlement growth look like in:</h3>
-            <input id="west_bank" type="radio" name="territory" value="west_bank">  
-            <label for="west_bank">Gasa Strip</label>  
+            <input id="gaza_strip" type="radio" name="territory" value="west_bank">
+            <label for="gaza_strip">Gaza Strip</label>  
 
-            <input id="gaza_strip" type="radio" name="territory" value="gaza_strip">
-            <label for="gaza_strip">West Bank</label>  
+            <input id="west_bank" type="radio" name="territory" value="gaza_strip">
+            <label for="west_bank">West Bank</label>  
         </div>
     </div>
 
