--- a/israel2.html
+++ b/israel2.html
@@ -35,7 +35,7 @@
 
 
     </div>
-
+    
     <!--// settlement chart is here //-->
     
     <div class="chart_area">
@@ -59,7 +59,15 @@
     </div>
 
     </div>
-
+    <form >
+      <input type="checkbox" name="region" value="gaza" id="check_gaza" class="check_region" checked>gaza<br>
+      <input type="checkbox" name="region" value="Samaria"  id="check_samaria" class="check_region" checked>Samaria<br>
+      <input type="checkbox" name="region" value="Benjamin"  id="check_benjamin" class="check_region" checked>Benjamin<br>
+      <input type="checkbox" name="region" value="Etzion Bloc"  id="check_etzion" class="check_region" checked>Etzion Bloc<br>
+      <input type="checkbox" name="region" value="Jordan Valley"  id="check_jordan" class="check_region" checked>Jordan Valley<br>
+      <input type="checkbox" name="region" value="Mount Hebron"  id="check_mount" class="check_region" checked>Mount Hebron<br>
+      <input type="checkbox" name="region" value="Megilot"  id="check_megilot" class="check_region" checked>Megilot<br>
+    </form>
   </body>    
 
 <script src="israel.js"></script>
