may have fixed the font problem also am in the midst of stying the checkboxes Gaurav made. added labels to checkboxes as well.

--- a/israel2.html
+++ b/israel2.html
@@ -29,6 +29,18 @@
             <h2>In <span id="main_year"></span>,
            what does Israeli settlement growth look like in Palestine?</h2>
           </div>
+          <div class="checkboxes">
+          <form>
+      <input type="checkbox" name="region" value="gaza" id="check_gaza" class="check_region" checked><label for="check_gaza">Gaza</label><br>
+      <input type="checkbox" name="region" value="Samaria"  id="check_samaria" class="check_region" checked><label for="check_samaria">Samaria</label><br>
+      <input type="checkbox" name="region" value="Benjamin"  id="check_benjamin" class="check_region" checked><label for="check_benjamin">Benjamin</label><br>
+      <input type="checkbox" name="region" value="Etzion Bloc"  id="check_etzion" class="check_region" checked><label for="check_etzion">Etzion Bloc</label><br>
+    </div>
+    <div class="checkboxes">
+      <input type="checkbox" name="region" value="Jordan Valley"  id="check_jordan" class="check_region" checked><label for="check_jordan">Jordan Valley</label><br>
+      <input type="checkbox" name="region" value="Mount Hebron"  id="check_mount" class="check_region" checked><label for="check_mount">Mount Hebron</label><br>
+      <input type="checkbox" name="region" value="Megilot"  id="check_megilot" class="check_region" checked><label for="check_megilot">Megilot</label><br>
+    </form></div>
           <div class="slide" id="slider"></div>
          
         </div>
@@ -59,15 +71,7 @@
     </div>
 
     </div>
-    <form >
-      <input type="checkbox" name="region" value="gaza" id="check_gaza" class="check_region" checked>gaza<br>
-      <input type="checkbox" name="region" value="Samaria"  id="check_samaria" class="check_region" checked>Samaria<br>
-      <input type="checkbox" name="region" value="Benjamin"  id="check_benjamin" class="check_region" checked>Benjamin<br>
-      <input type="checkbox" name="region" value="Etzion Bloc"  id="check_etzion" class="check_region" checked>Etzion Bloc<br>
-      <input type="checkbox" name="region" value="Jordan Valley"  id="check_jordan" class="check_region" checked>Jordan Valley<br>
-      <input type="checkbox" name="region" value="Mount Hebron"  id="check_mount" class="check_region" checked>Mount Hebron<br>
-      <input type="checkbox" name="region" value="Megilot"  id="check_megilot" class="check_region" checked>Megilot<br>
-    </form>
+    
   </body>    
 
 <script src="israel.js"></script>
