still making small adjustments. working on formatting the header

--- a/israel2.html
+++ b/israel2.html
@@ -26,8 +26,7 @@
           </div>
           
           <div class="two-third" style="line-height: 150px">
-            <h2>In <span id="main_year"></span>,
-           what does Israeli settlement growth look like in Palestine?</h2>
+            <h2>What do Israeli settlements in Palestinian territories look like in <span id="main_year"></span></h2>
           </div>
           <div class="checkboxes">
           <form>
