modified layout some more

--- a/israel2.html
+++ b/israel2.html
@@ -25,8 +25,11 @@
           i247: Information Visualization<br> Spring 2013</h5></h3>
           </div>
           
-          <div class="two-third" style="line-height: 150px">
-            <h2>What do Israeli settlements in Palestinian territories look like in <span id="main_year"></span></h2>
+          <div class="question_area">
+            <div id= "question"><h2>What do Israeli settlements in Palestinian territories look like in</h2></div> 
+            <div id="year_display" ><h2><span id="main_year"></span></h2></div>
+            <div class="question_mark">?</div>
+
           </div>
           <div class="checkboxes">
           <form>
@@ -52,7 +55,7 @@
     <div class="chart_area">
       <div class="third">
         <div id ="map">
-          </p>Map data goes here.</p>
+          <p></p>
         </div>
       </div>
 
