changed checkbox label colors

--- a/israel2.html
+++ b/israel2.html
@@ -43,15 +43,15 @@
           </div>
           <div class="checkboxes">
           <form>
-      <input type="checkbox" name="region" value="gaza" id="check_gaza" class="check_region" checked><label for="check_gaza">Gaza</label><br>
-      <input type="checkbox" name="region" value="Samaria"  id="check_samaria" class="check_region" checked><label for="check_samaria">Samaria</label><br>
-      <input type="checkbox" name="region" value="Benjamin"  id="check_benjamin" class="check_region" checked><label for="check_benjamin">Benjamin</label><br>
-      <input type="checkbox" name="region" value="Etzion Bloc"  id="check_etzion" class="check_region" checked><label for="check_etzion">Etzion Bloc</label><br>
+      <input type="checkbox" name="region" value="gaza" id="check_gaza" class="check_region" checked><label for="check_gaza"><h3 id="gaza_type">Gaza</h3></label><br>
+      <input type="checkbox" name="region" value="Samaria"  id="check_samaria" class="check_region" checked><label for="check_samaria"><h3 id="sam_type">Samaria</h3></label><br>
+      <input type="checkbox" name="region" value="Benjamin"  id="check_benjamin" class="check_region" checked><label for="check_benjamin"><h3 id="benjamin_type">Benjamin</h3></label><br>
+      <input type="checkbox" name="region" value="Etzion Bloc"  id="check_etzion" class="check_region" checked><label for="check_etzion"><h3 id="etzion_type">Etzion Bloc</h3></label><br>
     </div>
     <div class="checkboxes">
-      <input type="checkbox" name="region" value="Jordan Valley"  id="check_jordan" class="check_region" checked><label for="check_jordan">Jordan Valley</label><br>
-      <input type="checkbox" name="region" value="Mount Hebron"  id="check_mount" class="check_region" checked><label for="check_mount">Mount Hebron</label><br>
-      <input type="checkbox" name="region" value="Megilot"  id="check_megilot" class="check_region" checked><label for="check_megilot">Megilot</label><br>
+      <input type="checkbox" name="region" value="Jordan Valley"  id="check_jordan" class="check_region" checked><label for="check_jordan"><h3 id="jordan_type">Jordan Valley</h3></label><br>
+      <input type="checkbox" name="region" value="Mount Hebron"  id="check_mount" class="check_region" checked><label for="check_mount"><h3 id="mount_type">Mount Hebron</h3></label><br>
+      <input type="checkbox" name="region" value="Megilot"  id="check_megilot" class="check_region" checked><label for="check_megilot"><h3 id="megilot_type">Megilot</h3></label><br>
     </form></div>
           <div class="slide" id="slider"></div>
          
