added heading to historic events and cleaned data

--- a/israel2.html
+++ b/israel2.html
@@ -74,7 +74,7 @@
       </div>
           <!--// other charts and stats here //-->
     <div class="two-third" id="other_data">
-      <div id="eventdiv" class="half" >
+      <div id="eventdiv" >
         </p>Historical data goes here.</p>
       </div>
     </div>
