--- a/israel2.html
+++ b/israel2.html
@@ -80,7 +80,15 @@
     </div>
 
     </div>
-    
+    <div id="total">
+      Gaza:<div id="t_gaza"></div>
+      Samaria:<div id="t_samaria"></div>
+      Benjamin:<div id="t_benjamin"></div>
+      Etzion Bloc:<div id="t_etzion"></div>
+      Jordan Valley:<div id="t_jordan"></div>
+      Mount Hebron:<div id="t_mount"></div>
+      Megilot:<div id="t_megilot"></div>
+    </div>
   </body>    
 
 <script src="israel.js"></script>
