--- a/israel2.html
+++ b/israel2.html
@@ -68,14 +68,37 @@
     <!--// settlement chart is here //-->
     
     <div class="chart_area">
-      <div class="third">
+      <div>
         <div id ="map">
           <p></p>
         </div>
       </div>
 
       <div class="two-third">
-        <p id="chart"></p>
+        <div>
+          <p id="chart"></p>
+        </div>
+        <div class="total_pop">
+          <div id="total">
+            <h3 style="text-decoration:underline;">Population</h3>
+            <h3>Gaza:</h3>
+            <h3>Samaria:</h3>
+            <h3>Benjamin:</h3>
+            <h3>Etzion Bloc:</h3>
+            <h3>Jordan Valley:</h3>
+            <h3>Mount Hebron:</h3>
+            <h3>Megilot:</h3>
+          </div>
+          <div>
+            <h3><span id="t_gaza"></span></h3>
+            <h3><span id="t_samaria"></span></h3>
+            <h3><span id="t_benjamin"></span></h3>
+            <h3><span id="t_etzion"></span></h3>
+            <h3><span id="t_jordan"></span></h3>
+            <h3><span id="t_mount"></span></h3>
+            <h3><span id="t_megilot"></span></h3>
+          </div>
+        </div>
         <div id="eventdiv">
           </p></p>
         </div>
@@ -91,15 +114,7 @@
    
 
     </div>
-    <div id="total">
-      Gaza:<div id="t_gaza"></div>
-      Samaria:<div id="t_samaria"></div>
-      Benjamin:<div id="t_benjamin"></div>
-      Etzion Bloc:<div id="t_etzion"></div>
-      Jordan Valley:<div id="t_jordan"></div>
-      Mount Hebron:<div id="t_mount"></div>
-      Megilot:<div id="t_megilot"></div>
-    </div>
+
   </body>    
 
 <script src="israel.js"></script>
