--- a/israel2.html
+++ b/israel2.html
@@ -33,7 +33,7 @@
             <h3>Little Town in the Desert</h3>
             <h5>Sources:
             <a href="http://www.fmep.org/">Population</a>&nbsp;|
-            <a href="en.wikipedia.org/wiki/Timeline_of_the_Israeli–Palestinian_conflict">Events</a><br><br>
+            <a href="http://en.wikipedia.org/wiki/Timeline_of_the_Israeli–Palestinian_conflict">Events</a><br><br>
 
             Vimal Kini, Gaurav Shetti, Jen Wang<br>
           i247: Information Visualization<br> Spring 2013</h5>
